objects/Partner_Registration_Linkedin__mdt.object
<CustomObject>
    <description>It is used to maintain Partner registration page&apos;s Linkedin integration and maintain it&apos;s credentials</description>
    <fields>
        <fullName>AuthURL__c</fullName>
        <label>AuthURL</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codeURL__c</fullName>
        <label>codeURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tokenUrl__c</fullName>
        <label>tokenUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Registration Linkedin</label>
    <pluralLabel>Partner Registration Linkedin</pluralLabel>
</CustomObject>